--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Cube</string>
     <string name="skin_selected">면이 선택되었습니다.</string>
+    <string name="select_function">기능을 선택해주세요.</string>
+    <string name="add_new_device">새로운 기기 추가 +</string>
     <string-array name="skinNames">
         <item>Red</item>
         <item>Orange</item>
